refactor: move feign calls out of transactions to free db connections